# MarkdownUI

./: .gitignore  .markdownlint.jsonc  .releaserc  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-mermaid-syntax.md  vite.config.ts
.github/workflows/: release.yml  semantic-release.yml
.hermes/plans/: 2026-06-09_025000-mcp-live-animations.md
.kilo/plans/: 1783345340101-filesystem-only-refactor.md  1783351017390-global-search-sidebar.md
docs/: ARCHITECTURE.md  PLAN-filesystem-storage.md  PLAN-settings-dialog.md
docs/feature-left-nav.md/: plan.md
mcp-server/: README.md  package-lock.json  package.json  server.js
scripts/: release.cjs  sync-version.cjs
src/: App.tsx  ThemeContext.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  converter.rs  database.rs  filesystem.rs  main.rs  mcp_server.rs  storage.rs
src/components/: CollectionsBrowser.tsx  ConfirmModal.tsx  DocumentEditor.tsx  DocumentPreview.tsx  DocumentRow.tsx  FilesystemBrowser.tsx  FolderNode.tsx  Header.tsx  IconAction.tsx  InlineRename.tsx  ResizableSplit.tsx  SegmentedToggle.tsx  SettingsModal.tsx  SettingsRow.tsx  ZoomControls.tsx
src/contexts/: SettingsContext.tsx  ToastContext.tsx
src/hooks/: useFocusTrap.ts  useMcpEvents.ts  useSidebarResize.ts
src/store/: useAppStore.ts
src/utils/: headings.ts  paths.ts  slugify.ts
