[package]
name = "markdown-ui"
version = "1.0.5"
description = "Markdown document viewer and editor with Mermaid support"
authors = ["Gregory Buchenberger"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-create-dir", "fs-remove-dir", "fs-read-file", "fs-remove-file", "fs-write-file", "fs-read-dir", "fs-exists", "shell-open", "dialog-save", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
shiva = { version = "1.4.9", features = ["markdown", "html"] }
carbonpdf = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
chromiumoxide = "0.8"
futures = "0.3"
bytes = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
